# knova

./: .gitignore  CONTRIBUTING.md  README.md
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/versions/: 32d6a1a830f0_add_onboarding_completed_to_users.py  shortnote_extid_source.py
backend/core/: config.py  security.py
backend/ml/: constants.py  loader.py
backend/models/: knova_tfidf.pkl
backend/src/auth/: router.py  schemas.py  service.py
backend/src/db/: models.py  session.py
backend/src/db/er/: schema.dbml  schema.erd-layout.json  schema.sql
backend/src/onboarding/: route.py  service.py
backend/src/posts/: router.py  schemas.py  service.py
backend/src/recommendation/: features.py  ranker.py  retrieval.py  router.py  service.py  thompson.py
backend/src/reference/: router.py  service.py
backend/src/users/: router.py  schemas.py  service.py
backend/tests/: test_onboarding.py
frontend/: .gitignore  README.md  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(main)/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/components/cards/: FlashCard.tsx  McqCard.tsx  TextContentCard.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useOnboarding.ts
frontend/src/lib/: api.ts  auth.ts  interests.ts  onboarding.ts  posts.ts  reference.ts
frontend/src/types/: authentication.ts  post.ts
ml/data/: knova_content.csv  knova_interests.csv  knova_users.csv
ml/notebook/: Knova_Engine.ipynb
(+5 files in other folders)
