[project]
name = "knova-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "implicit>=0.7.3",
    "itsdangerous>=2.2.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "passlib[argon2]>=1.7.4",
    "pgvector>=0.4.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "scikit-learn==1.6.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
